--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>folly</title>
   </head>
   <body>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/67d8PMU8fdS3jTNVuKnEQu?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3yuMz35Grny22l6SA5GDTy?utm_source=generator" width="49%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3j1aXssmFgpSsK71rNEfdg?utm_source=generator" width="49%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </p>
   </body>
 </html>
