--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>folly</title>
+    <style>
+        body {background-color: rgb(6, 6, 10);}
+        </style>
   </head>
   <body>
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3yuMz35Grny22l6SA5GDTy?utm_source=generator" width="49%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
