--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         </style>
   </head>
   <body>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3yuMz35Grny22l6SA5GDTy?utm_source=generator" width="49%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3j1aXssmFgpSsK71rNEfdg?utm_source=generator" width="49%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3yuMz35Grny22l6SA5GDTy?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3j1aXssmFgpSsK71rNEfdg?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </p>
   </body>
 </html>
