--- a/index.html
+++ b/index.html
@@ -4,11 +4,55 @@
     <title>folly</title>
     <style>
         body {background-color: rgb(6, 6, 10);}
-        </style>
+        .playlists {
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        .playlist {
+        aspect-ratio: 1 / 1;
+        max-width: 25%;
+        background: #191414;
+        color: #fff;
+        cursor: pointer;
+        }
+
+        .playlist:hover {
+        background: #1Db954;
+        }
+    </style>
   </head>
   <body>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3yuMz35Grny22l6SA5GDTy?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3j1aXssmFgpSsK71rNEfdg?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    </p>
+    <script src="https://open.spotify.com/embed/iframe-api/v1" async></script>
+    <div id="embed-iframe"></div>
+    <script type="text/javascript">
+        window.onSpotifyIframeApiReady = (IFrameAPI) => {
+        const element = document.getElementById('embed-iframe');
+        const options = {
+            width: '100%',
+            height: '360',
+            uri: 'spotify:playlist:3yuMz35Grny22l6SA5GDTy'
+        };
+            const callback = (EmbedController) => {
+                document.querySelectorAll('.playlist').forEach(
+                playlist => {
+                    playlist.addEventListener('click', () => {
+                    EmbedController.loadUri(playlist.dataset.spotifyId)
+                    });
+                })
+            };
+            IFrameAPI.createController(element, options, callback);
+        };
+    </script>
+    <div class = "playlists">
+        <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebb3f0440006f18f7cabc497fc7" class="playlist" data-spotify-id="spotify:playlist:3yuMz35Grny22l6SA5GDTy"/>
+        <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebb589d4d42672b3ae8efac91aa" class="playlist" data-spotify-id="spotify:playlist:3j1aXssmFgpSsK71rNEfdg"/>
+        <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebb61b6645a05bd8003ef4d88ae" class="playlist" data-spotify-id="spotify:playlist:3drny4vpAtV3mqw3lEn7K3"/>
+        <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebb9fd68e92758627ebd2c8218c" class="playlist" data-spotify-id="spotify:playlist:3d0FVq5VjIWp5g8cbUgJjh"/>
+    </div>
   </body>
 </html>
+
+3j1aXssmFgpSsK71rNEfdg
+
+3drny4vpAtV3mqw3lEn7K3
