--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         const element = document.getElementById('embed-iframe');
         const options = {
             width: '100%',
-            height: '360',
+            height: '480px',
             uri: 'spotify:playlist:3yuMz35Grny22l6SA5GDTy'
         };
             const callback = (EmbedController) => {
@@ -45,14 +45,32 @@
         };
     </script>
     <div class = "playlists">
-        <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebb3f0440006f18f7cabc497fc7" class="playlist" data-spotify-id="spotify:playlist:3yuMz35Grny22l6SA5GDTy"/>
-        <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebb589d4d42672b3ae8efac91aa" class="playlist" data-spotify-id="spotify:playlist:3j1aXssmFgpSsK71rNEfdg"/>
-        <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebb61b6645a05bd8003ef4d88ae" class="playlist" data-spotify-id="spotify:playlist:3drny4vpAtV3mqw3lEn7K3"/>
-        <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebb9fd68e92758627ebd2c8218c" class="playlist" data-spotify-id="spotify:playlist:3d0FVq5VjIWp5g8cbUgJjh"/>
+        <!-- story #1 -->
+        <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebb3f0440006f18f7cabc497fc7" 
+        alt="story #1" class="playlist" data-spotify-id="spotify:playlist:3yuMz35Grny22l6SA5GDTy"/>
+        <!-- story #2 -->
+        <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebb589d4d42672b3ae8efac91aa" 
+        class="playlist" data-spotify-id="spotify:playlist:3j1aXssmFgpSsK71rNEfdg"/>
+        <!-- story #3 -->
+        <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebb61b6645a05bd8003ef4d88ae" 
+        class="playlist" data-spotify-id="spotify:playlist:3drny4vpAtV3mqw3lEn7K3"/>
+        <!-- story #4 -->
+        <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebb9fd68e92758627ebd2c8218c" 
+        class="playlist" data-spotify-id="spotify:playlist:3d0FVq5VjIWp5g8cbUgJjh"/>
+        <!-- story #5 -->
+        <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebbdeb4363f5f4a6e738e8220a8" 
+        class="playlist" data-spotify-id="spotify:playlist:0yvgc1BsuEy9u6SwSjPkPl"/>
+        <!-- story #6 -->
+        <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebbbfa56041934092a9cfb72b78" 
+        class="playlist" data-spotify-id="spotify:playlist:76vkVZuZNAZKDVcHnCt1Oi"/>
+        <!-- story #7 -->
+        <input type="image" src="https://image-cdn-fa.spotifycdn.com/image/ab67706c0000bebb4b5ff1ea4940ee086f450bc6" 
+        class="playlist" data-spotify-id="spotify:playlist:20xXdftsAQxH8b0RvKH7hS"/>
+        <!-- story #8 -->
+        <input type="image" src="https://image-cdn-fa.spotifycdn.com/image/ab67706c0000bebb108ccfb98392ba1228d0a8ac" 
+        class="playlist" data-spotify-id="spotify:playlist:3VQEv0FHzzx2E6NXJ8Nktt"/>
     </div>
   </body>
 </html>
 
-3j1aXssmFgpSsK71rNEfdg
-
-3drny4vpAtV3mqw3lEn7K3
+https://open.spotify.com/playlist/3VQEv0FHzzx2E6NXJ8Nktt?si=97003c577fa041b8
