--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
         .playlist {
         aspect-ratio: 1 / 1;
-        max-width: 25%;
+        min-width: 25%;
+        max-width: 50%;
         background: #191414;
         color: #fff;
         cursor: pointer;
@@ -31,6 +32,7 @@
         const options = {
             width: '100%',
             height: '480px',
+            theme: 'dark',
             uri: 'spotify:playlist:3yuMz35Grny22l6SA5GDTy'
         };
             const callback = (EmbedController) => {
