--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
         .playlist {
         aspect-ratio: 1 / 1;
-        min-width: 25%;
-        max-width: 50%;
+        width: 25%;
         background: #191414;
         color: #fff;
         cursor: pointer;
