--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 playlist => {
                     playlist.addEventListener('click', () => {
                     EmbedController.loadUri(playlist.dataset.spotifyId),
+                    EmbedController.restart();
                     EmbedController.play();
                     });
                 })
