--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
                 document.querySelectorAll('.playlist').forEach(
                 playlist => {
                     playlist.addEventListener('click', () => {
-                    EmbedController.loadUri(playlist.dataset.spotifyId),
-                    EmbedController.restart();
-                    EmbedController.play();
+                    EmbedController.loadUri(playlist.dataset.spotifyId)
+                    EmbedController.resume();
                     });
                 })
             };
