--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     playlist.addEventListener('click', () => {
                     EmbedController.loadUri(playlist.dataset.spotifyId)
                     EmbedController.resume();
+                    EmbedController.play();
                     });
                 })
             };
