--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
                     currentMix = playlist.dataset.spotifyId
                     if (playlist.dataset.spotifyId == null)
                     {
-                        randomMix = Math.floor(Math.random() * numStories)+1
-                        currentMix = "spotify:playlist:" + randomMix + "\""
+                        const choices = document.querySelectorAll(".playlist")
+                        currentMix = choices[Math.floor(Math.random() * numStories)+1]
+                        currentMix = currentMix.dataset.spotifyId
+                        console.print(currentMix)
                     }
                     EmbedController.loadUri(currentMix)
                     EmbedController.resume()
