--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
                 playlist => {
                     playlist.addEventListener('click', () => 
                     {
-                    currentMix = playlist.dataset.spotifyId
-                    if (playlist.dataset.spotifyId == null)
+                    currentMix = playlist
+                    if (playlist == null)
                     {
                         const choices = document.querySelectorAll(".playlist")
                         currentMix = choices[Math.floor(Math.random() * numStories)+1]
                         currentMix = currentMix.dataset.spotifyId
                         console.print(currentMix)
                     }
-                    EmbedController.loadUri(currentMix)
+                    EmbedController.loadUri(currentMix.dataset.spotifyId)
                     EmbedController.resume()
                     EmbedController.play()
                     });
