--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     if (playlist == null)
                     {
                         const choices = document.querySelectorAll(".playlist")
+                        console.print(choices)
                         currentMix = choices[Math.floor(Math.random() * numStories)+1]
                         currentMix = currentMix.dataset.spotifyId
                         console.print(currentMix)
