fixed gallery width

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         }
         .random {
         aspect-ratio: 1 / 1;
-        width: 47.2em;
         background: #191414;
         color: #fff;
         cursor: pointer;
@@ -27,7 +26,8 @@
 
         .playlist {
         aspect-ratio: 1 / 1;
-        width: 47.2em;
+        width: 42em;
+        max-width: 50%;
         background: #191414;
         color: #fff;
         cursor: pointer;
