--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         background: #191414;
         color: #fff;
         cursor: pointer;
-        paddng: 20px;
+        padding: 20px;
         
         }
         .playlists {
