--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
         color: yellow;
         text-decoration: none;
         text-transform: lowercase;
+        padding: 20px;
+       font-size: 32px;
         }
         .random {
         aspect-ratio: 1 / 1;
         background: #191414;
         color: #fff;
         cursor: pointer;
-        padding: 20px;
+
         
         }
         .playlists {
