updated random button

--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
         color: yellow;
         text-decoration: none;
         text-transform: lowercase;
-        padding: 20px;
-       font-size: 32px;
-        }
-        .random {
-        aspect-ratio: 1 / 1;
-        background: #191414;
-        color: #fff;
-        cursor: pointer;
-
+        font-size: 32px;
+        text-align: center;
+        vertical-align: text-bottom;
         
         }
+
+        #random {
+        justify-content: center;
+        align-items: center;
+        width: 6em;
+        aspect-ratio: auto;
+        padding: 1.5em;
+        }
+        
         .playlists {
             display: flex;
             flex-wrap: wrap;
@@ -86,7 +89,7 @@
             IFrameAPI.createController(element, options, callback);
         };
     </script>
-    <a class="playlist" id="random" href='#'>randomize</a>
+    <div class = "playlists"><a class="playlist" id="random" href='#'>randomize</a></div>
     <div class = "playlists">
         <!-- story #1 --> <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebb3f0440006f18f7cabc497fc7" class="playlist" data-spotify-id="spotify:playlist:3yuMz35Grny22l6SA5GDTy"/>
         <!-- story #2 --> <input type="image" src="https://image-cdn-ak.spotifycdn.com/image/ab67706c0000bebb589d4d42672b3ae8efac91aa" class="playlist" data-spotify-id="spotify:playlist:3j1aXssmFgpSsK71rNEfdg"/>
