test multi game embeds

--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     <title>void folly</title>
 </head>
 <body>
-  <iframe src="https://archive.org/embed/arcade_balcube" width="640" height="448" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+  <iframe src="https://archive.org/embed/arcade_balcube" width="640" height="448" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' name="arcade_window" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+  <a href="https://archive.org/embed/arcade_balcube" target="arcade_window">Balcube</a>
+  <a href="https://archive.org/embed/arcade_marble" target="arcade_window">Marble</a>
 </body>
