moved emulator to new page

--- a/index.html
+++ b/index.html
@@ -4,15 +4,5 @@
     <title>void folly</title>
 </head>
 <body>
-  <iframe src="https://archive.org/embed/arcade_balcube" width="640" height="448" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' name="arcade_window" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
-  <a href="https://archive.org/embed/arcade_balcube" target="arcade_window">Balcube</a>
-  <a href="https://archive.org/embed/arcade_marble" target="arcade_window">Marble Madness</a>
-  <a href="https://archive.org/embed/arcade_outrun" target="arcade_window">Out Run</a>
-  <a href="https://archive.org/embed/arcade_spf2t" target="arcade_window">Super Puzzle Fighter II Turbo</a>
-  <a href="https://archive.org/embed/arcade_dendego" target="arcade_window">Densha de GO!</a>
-  <a href="https://archive.org/embed/arcade_gbbchmp" target="arcade_window">Great Bishi Bashi Champ</a>
-  <a href="https://archive.org/embed/arcade_ridgerac" target="arcade_window">Ridge Racer</a>
-  <a href="https://archive.org/embed/arcade_rsgun" target="arcade_window">Radiant Silvergun</a>
-  <a href="https://archive.org/embed/arcade_wjammers" target="arcade_window">Windjammers</a>
-  <a href="https://archive.org/embed/arcade_bgaregga" target="arcade_window">Battle Garegga</a>
+  <a href="arcade.html">arcade</a>
 </body>
