update iframe size

--- a/arcade.html
+++ b/arcade.html
@@ -9,6 +9,7 @@
   resize: both;
   overflow: auto;
   display:block;
+  margin: auto;
 }
     </style>
 </head>
@@ -16,7 +17,7 @@
   <div>
     <iframe src="https://archive.org/embed/arcade_balcube" width="640" height="448" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' name="arcade_window" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
   </div>
-  <div>
+  <div style="margin: auto; text-align:center;">
   <a href="https://archive.org/embed/arcade_balcube" target="arcade_window">Balcube</a>
   <a href="https://archive.org/embed/arcade_marble" target="arcade_window">Marble Madness</a>
   <a href="https://archive.org/embed/arcade_outrun" target="arcade_window">Out Run</a>
