--- a/arcade.html
+++ b/arcade.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div>
-    <iframe src="https://archive.org/embed/arcade_balcube" width="640" height="448" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' name="arcade_window" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+    <iframe src="https://archive.org/embed/arcade_balcube" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' name="arcade_window" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
   </div>
   <div style="margin: auto; text-align:center;">
   <a href="https://archive.org/embed/arcade_balcube" target="arcade_window">Balcube</a>
